# NutriAi

./: .gitignore  gunicorn_config.py  requirements.txt
backend/: app.py  pyproject.toml  render.yaml  requirements.txt  setup.py
frontend/: index.html  script.js  style.css
frontend/pages/: login.html
